<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/notification_popup"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:gravity="start"
	android:orientation="vertical">

	<RelativeLayout
		android:id="@+id/notification_display_facebook"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/notification_vertical_margin"
		android:layout_marginLeft="@dimen/notification_horizontal_margin"
		android:layout_marginRight="@dimen/notification_horizontal_margin"
		android:layout_marginTop="@dimen/notification_vertical_margin"
		android:onClick="handleClick"
		android:visibility="gone">

		<ImageView
			android:id="@+id/notification_icon_facebook"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_marginEnd="@dimen/notification_horizontal_margin"
			android:contentDescription="@string/hint_facebook_notification"
			android:src="@drawable/ic_face_white_36dp" />

		<TextView
			android:id="@+id/notification_title_facebook"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@id/notification_icon_facebook"
			android:text="@string/hint_facebook_notification"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/notification_text"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/notification_message_facebook"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/notification_title_facebook"
			android:layout_toEndOf="@id/notification_icon_facebook"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/notification_text" />
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/notification_display_sms"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/notification_vertical_margin"
		android:layout_marginLeft="@dimen/notification_horizontal_margin"
		android:layout_marginRight="@dimen/notification_horizontal_margin"
		android:layout_marginTop="@dimen/notification_vertical_margin"
		android:onClick="handleClick"
		android:visibility="gone">

		<ImageView
			android:id="@+id/notification_icon_sms"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_marginEnd="@dimen/notification_horizontal_margin"
			android:contentDescription="@string/hint_sms_notification"
			android:src="@drawable/ic_message_white_36dp" />

		<TextView
			android:id="@+id/notification_title_sms"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@id/notification_icon_sms"
			android:text="@string/hint_sms_notification"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/notification_text"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/notification_message_sms"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/notification_title_sms"
			android:layout_toEndOf="@id/notification_icon_sms"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/notification_text" />
	</RelativeLayout>

	<RelativeLayout
		android:id="@+id/notification_display_whatsapp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/notification_vertical_margin"
		android:layout_marginLeft="@dimen/notification_horizontal_margin"
		android:layout_marginRight="@dimen/notification_horizontal_margin"
		android:layout_marginTop="@dimen/notification_vertical_margin"
		android:onClick="handleClick"
		android:visibility="gone">

		<ImageView
			android:id="@+id/notification_icon_whatsapp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentStart="true"
			android:layout_marginEnd="@dimen/notification_horizontal_margin"
			android:contentDescription="@string/hint_whatsapp_notification"
			android:src="@drawable/ic_opacity_white_36dp" />

		<TextView
			android:id="@+id/notification_title_whatsapp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toEndOf="@id/notification_icon_whatsapp"
			android:text="@string/hint_whatsapp_notification"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/notification_text"
			android:textStyle="bold" />

		<TextView
			android:id="@+id/notification_message_whatsapp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/notification_title_whatsapp"
			android:layout_toEndOf="@id/notification_icon_whatsapp"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/notification_text" />
	</RelativeLayout>

</LinearLayout>
